--- a/style.css
+++ b/style.css
@@ -27,18 +27,29 @@ h1 {
 
 .social-links {
     display: flex;
-    justify-content: center;
-    gap: 15px;
+    flex-direction: column;
+    align-items: center;
     margin-top: 15px;
+    gap: 10px;
 }
 
-.social-links a {
+.social {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     text-decoration: none;
     color: white;
+    font-size: 20px;
     font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 10px;
     transition: 0.3s;
+}
+
+.social i {
+    font-size: 30px; /* Ikony większe */
 }
 
 .github {
@@ -53,6 +64,6 @@ h1 {
     background: #ff0050;
 }
 
-.social-links a:hover {
+.social:hover {
     opacity: 0.8;
 }
