--- a/style.css
+++ b/style.css
@@ -67,8 +67,12 @@ h1 {
 .social:hover {
     opacity: 0.8;
 }
+.social i {
+    font-size: 24px; /* Zmniejszamy ikonki */
+}
+
 .social img {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
+    width: 24px; /* Jeśli używasz obrazków zamiast FontAwesome */
+    height: 24px;
+    margin-right: 8px;
 }
