--- a/style.css
+++ b/style.css
@@ -112,16 +112,21 @@ body {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
 }
 .email {
-    background: #d44638; /* Czerwony kolor Gmaila */
+    background: #d44638; /* Kolor Gmaila */
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px 15px;
+    border-radius: 8px;
+    text-decoration: none;
 }
+
 .email .icon {
-    width: 24px;  /* Zmniejszamy ikonę */
+    width: 24px;
     height: 24px;
     margin-right: 10px;
 }
+
 
 
