--- a/style.css
+++ b/style.css
@@ -91,7 +91,8 @@ h1 {
 }
 
 body {
-    background: linear-gradient(180deg, #1e1e1e, #2a2a2a, #3a3a3a);
+    background: url('los.png') no-repeat center center fixed;
+    background-size: cover;
     color: white;
     font-family: 'Poppins', sans-serif;
     text-align: center;
@@ -168,6 +169,7 @@ h1, h2, h3 {
     font-weight: 600;
     letter-spacing: 1px;
 }
+
 
 
 
